--- a/kerolasa.css
+++ b/kerolasa.css
@@ -1,5 +1,5 @@
 BODY {
-width: 640px;
+font-size: 16px;
 }
 A {
 background: transparent;
@@ -9,19 +9,16 @@ P.justtext {
 float: none;
 font-size: medium;
 margin-left: 20px;
-width: 640px;
 }
 DIV.justtext {
 float: none;
 font-size: medium;
 margin-left: 20px;
-width: 640px;
 }
 P.address {
 float: none;
 font-size: medium;
 margin-left: 45px;
-width: 640px;
 }
 TABLE {
 float: none;
