inline css for index.html
This should make rendering quicker.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/kerolasa.css
+++ b/kerolasa.css
@@ -1,4 +1,5 @@
 BODY {
+width: 640px;
 font-size: 16px;
 }
 A {
@@ -9,16 +10,19 @@ P.justtext {
 float: none;
 font-size: medium;
 margin-left: 20px;
+width: 640px;
 }
 DIV.justtext {
 float: none;
 font-size: medium;
 margin-left: 20px;
+width: 640px;
 }
 P.address {
 float: none;
 font-size: medium;
 margin-left: 45px;
+width: 640px;
 }
 TABLE {
 float: none;
