--- a/kerolasa.css
+++ b/kerolasa.css
@@ -1,5 +1,5 @@
 BODY {
-width: 640px;
+max-width:700px;
 font-size: 16px;
 }
 A {
@@ -10,19 +10,19 @@ P.justtext {
 float: none;
 font-size: medium;
 margin-left: 20px;
-width: 640px;
+max-width:700px;
 }
 DIV.justtext {
 float: none;
 font-size: medium;
 margin-left: 20px;
-width: 640px;
+max-width:700px;
 }
 P.address {
 float: none;
 font-size: medium;
 margin-left: 45px;
-width: 640px;
+max-width:700px;
 }
 TABLE {
 float: none;
