--- a/kerolasa.css
+++ b/kerolasa.css
@@ -1,4 +1,5 @@
 BODY{max-width:720px;font-size: 16px}
 A{text-decoration: none}
+H1{font-size:16px;font-weight: bold}
 P.j{margin-left:32px;max-width:720px}
 PRE.j {margin-left:32px;max-width:720px}
